--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="imagem">
         <img src="./pic01.png" alt="Imagem da Carteira Digital">
     </section>
-    <section class="descrição">
+    <section class="descricao">
         <p> O Desbuga é uma solução financeira para os problemas dos nossos usuários, trazendo um app de fácil 
             utilização, que contenha todas as informações que este precisa para controlar suas finanças diariamente, 
             de forma prática, clara e divertida, além de propor desafios por meio da gamificação.</p>
@@ -29,7 +29,7 @@
         <form action="#">
             <input type="text" name="nome" placeholder="Digite seu nome completo">
             <input type="email" name="email" placeholder="Digite seu e-mail">
-            <button type="button" class="btn btn-danger" onclick="validarFormulario()">Abrir conta</button>
+            <button type="button" class="btn btn-dark" onclick="validarFormulario()">Abrir conta</button>
         </form>
     </section>
     <footer>
