--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Carteira Digital (wallet)</title>
     <link rel="stylesheet" href="./style.css"
 </head>
@@ -17,23 +18,26 @@
     <section class="descricao">
         <p> O Desbuga é uma solução financeira para os problemas dos nossos usuários, trazendo um app de fácil 
             utilização, que contenha todas as informações que este precisa para controlar suas finanças diariamente, 
-            de forma prática, clara e divertida, além de propor desafios por meio da gamificação.</p>
+            de forma prática, clara e divertida, além de propor desafios por meio da <b>gamificação</b>.</p>
         <p> Para incentivar as pessoas a utilizarem mais o app fizemos uma funcionalidade de gamificação. 
             Onde o usuário ganha pontos ao realizar determinadas ações, como: assistir vídeos curtos, leituras rápidas, 
-            adicionar movimentações e metas. Além disso, o app tem outras funcionalidades como, controle financeiro
-             pessoal e entre amigos; investimentos  e acompanhamento de metas. Estamos prontos para desbugar a sua vida 
-             financeira.</p>
+            adicionar movimentações e metas. Além disso, o app tem outras funcionalidades como:
+            <p class="itens">controle financeiro;</p> 
+            <p class="itens">pessoal e entre amigos;</p>
+            <p class="itens">investimentos;</p>
+            <p class="itens">acompanhamento de metas.</p>
+            <p>Estamos prontos para desbugar a sua vida financeira.</p>
     </section>
     <section class="formulario">
         <h3>Abra a sua conta agora e garanta sua vida financeira mais saúdavel!</h3>
         <form action="#">
-            <input type="text" name="nome" placeholder="Digite seu nome completo">
-            <input type="email" name="email" placeholder="Digite seu e-mail">
+            <input type="text" id="nome" placeholder="Digite seu nome completo">
+            <input type="email" id="email" placeholder="Digite seu e-mail">
             <button type="button" class="btn btn-dark" onclick="validarFormulario()">Abrir conta</button>
         </form>
     </section>
     <footer>
-        <p>Desbude sua vida financeira. Acesse já!</p>
+        <p>Desbuge sua vida financeira. Acesse já!</p>
     </footer>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
